--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script type="text/x-handlebars-template" id="book-list-template">
     <li class="book-items" data-bookid={{book_id}}>
       <div class="book-container">
-        <img src={{image_url}}>
+        <img src={{image}}>
         <div class="book-overlay">
           <h3>{{title}}</h3>
           <p>{{author}}</p>
