--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
         <ul id="book-list"></ul>
       </section>
     </section>
+    <section class="single-book-view container">
+      <h2 class="view-title">My Books</h2>
+      <section class="book-list">
+        <ul id="book-list"></ul>
+      </section>
+    </section>
   </main>
   <footer>
     <aside class="social-links">
@@ -62,8 +68,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 
   <!-- Application Resources -->
+  <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <script src="./scripts/models/book.js" type="text/javascript"></script>
   <script src="./scripts/views/book-view.js" type="text/javascript"></script>
   <script src="./scripts/views/error-view.js" type="text/javascript"></script>
+  <script src="./scripts/views/routes.js" type="text/javascript"></script>
 </body>
 </html>
