--- a/styles/index.html
+++ b/styles/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="./icons.css">
-  <link rel="stylesheet" href="base.css">
-  <link rel="stylesheet" href="layout.css">
-  <link rel="stylesheet" href="modules.css">
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="./styles/icons.css">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/modules.css">
 
   <!-- Application Templates -->
   <script type="text/x-handlebars-template" id="error-template">
