--- a/styles/index.html
+++ b/styles/index.html
@@ -51,6 +51,13 @@
       <section class="book-list">
         <ul id="book-list"></ul>
       </section>
+      <section class="create-page" class="page">
+       <h1>Create page</h1>
+       <form>
+           <input id="create-form-name" type="text">
+           <button>create</button>
+       </form>
+   </section>
     </section>
   </main>
   <footer>
