updates to client

--- a/index.html
+++ b/index.html
@@ -46,19 +46,26 @@
         <ul id="book-list"></ul>
       </section>
     </section>
-    <section class="single-book-view container">
-      <h2 class="view-title">My Books</h2>
-      <section class="book-list">
-        <ul id="book-list"></ul>
-      </section>
-      <section class="create-page" class="page">
+      <section class="single-book-view container">
+        <h2 class="view-title">Book</h2>
+        <section class="single-book">
+          <ul id="single-book-list"></ul>
+        </section>
+        </section>
+      <section class="create-page container">
        <h1>Create page</h1>
        <form>
-           <input id="create-form-name" type="text">
-           <button>create</button>
-       </form>
+           <input id="create-book-name" type="text">
+           <form>
+             <input type="text" placeholder="Title"></input>
+             <input type="text" placeholder="Author"></input>
+             <input type="text" placeholder="ISBN"></input>
+             <input type="text" placeholder="Image URL"></input>
+             <input type="text" placeholder="Description"></input>
+            <button type="submit">create</button>
+           </form>
    </section>
-    </section>
+   
   </main>
   <footer>
     <aside class="social-links">
