--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="book-container">
         <img src={{image}}>
         <div class="book-overlay">
-          <a href="books/{{book_id}}"><h3>{{title}}</h3></a>
+          <a href="./books/{{book_id}}"><h3>{{title}}</h3></a>
           <p>{{author}}</p>
         </div>
       </div>
